Removed undefined function call in popup.html

--- a/popup.html
+++ b/popup.html
@@ -10,7 +10,7 @@
     <!-- Title -->
     <h1 id="title">Hack This Page</h1>
     <!-- Hack Button -->
-    <button onclick="click()" id="hackButton">HACK</button>
+    <button id="hackButton">HACK</button>
 
     <script src="popup.js"></script>
 </body>
