Added info. on how everything works in popup.html

--- a/popup.html
+++ b/popup.html
@@ -1,3 +1,9 @@
+<!-- 
+    How this program works:
+    The popup.js file sends a message "Clicked" to content.js when the hackButton is pressed in popup.html
+    content.js then receives the message and knows to hack the page i.e. make it editable
+ -->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
