EVERYTHING WORKS, Finally

--- a/popup.html
+++ b/popup.html
@@ -8,15 +8,17 @@
 <html lang="en">
 <head>
     <link rel="stylesheet" href="styles.css">
-    <title>Hack This Page</title>
+    <title>Hack This Page?</title>
 </head>
 <body>
     <!-- Credit -->
-    <h5 id="credits">Developed by <a target="_blank" href="https://virejdasani.github.io/virej/">@VirejDasani</a></h5>
+    <h4 id="credits">Developed by <a target="_blank" href="https://virejdasani.github.io/virej/">@VirejDasani</a></h4>
     <!-- Title -->
-    <h1 id="title">Hack This Page</h1>
+    <h1 id="title">Hack This Page?</h1>
     <!-- Hack Button -->
     <button id="hackButton">HACK</button>
+    <!-- Tutorial -->
+    <!-- <a href="" id="tutorial">Tutorial</a> -->
 
     <script src="popup.js"></script>
 </body>
