--- a/popup.html
+++ b/popup.html
@@ -18,7 +18,7 @@
     <!-- Hack Button -->
     <button id="hackButton">HACK</button>
     <!-- Tutorial -->
-    <!-- <a href="" id="tutorial">Tutorial</a> -->
+    <p><a href="https://youtu.be/678LAl7E76U" target="_blank" id="tutorial">Tutorial</a></p>
 
     <script src="popup.js"></script>
 </body>
