--- a/popup.html
+++ b/popup.html
@@ -1,8 +1,8 @@
 <!-- 
     How this program works:
     The popup.js file sends a message "Clicked" to content.js when the hackButton is pressed in popup.html
-    content.js then receives the message and knows to hack the page i.e. make it editable
-    The page can be made editable by putting this in the console
+    content.js then receives this message and knows to hack the page i.e. make it editable
+    This is done by putting this in the console:
     document.body.contentEditable = 'true'
 
  -->
