Added alert('Hacked'), leave a review link and changed version to 3.0

--- a/popup.html
+++ b/popup.html
@@ -22,6 +22,8 @@
     <button id="hackButton">HACK</button>
     <!-- Tutorial -->
     <p><a href="https://youtu.be/678LAl7E76U" target="_blank" id="tutorial">Tutorial</a></p>
+    <!-- Leave a review -->
+    <p><a href="https://chrome.google.com/webstore/detail/hack-this-page/nbfegodimhenhkghjeppighcbpdinhdp/reviews" target="_blank" id="tutorial">Leave a review</a></p>
 
     <script src="popup.js"></script>
 </body>
