--- a/popup.html
+++ b/popup.html
@@ -9,10 +9,27 @@
 
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <link rel="stylesheet" href="styles.css">
+
+    <!-- Google Analytics -->
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-XXL7CEJJY9"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+        gtag('js', new Date());
+
+        gtag('config', 'G-XXL7CEJJY9');
+    </script>
+
     <title>Hack This Page?</title>
 </head>
+
 <body>
     <!-- Credit -->
     <h4 id="credits">Developed by <a target="_blank" href="https://virejdasani.github.io/virej/">@VirejDasani</a></h4>
@@ -22,9 +39,11 @@
     <button id="hackButton">HACK</button>
     <!-- Tutorial -->
     <p><a href="https://youtu.be/678LAl7E76U" target="_blank" id="tutorial">Tutorial</a></p>
-    <!-- Leave a review -->
-    <p><a href="https://chrome.google.com/webstore/detail/hack-this-page/nbfegodimhenhkghjeppighcbpdinhdp/reviews" target="_blank" id="tutorial">Leave a review</a></p>
+    <!-- Leave a reviewGoogle analytics -->
+    <p><a href="https://chrome.google.com/webstore/detail/hack-this-page/nbfegodimhenhkghjeppighcbpdinhdp/reviews"
+            target="_blank" id="tutorial">Leave a review</a></p>
 
     <script src="popup.js"></script>
 </body>
+
 </html>
