Hack This Page 2 🎉

--- a/popup.html
+++ b/popup.html
@@ -11,39 +11,31 @@
 <html lang="en">
 
 <head>
-    <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="styles.css">
 
-    <!-- Google Analytics -->
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-XXL7CEJJY9"></script>
-    <script>
-        window.dataLayer = window.dataLayer || [];
-
-        function gtag() {
-            dataLayer.push(arguments);
-        }
-        gtag('js', new Date());
-
-        gtag('config', 'G-XXL7CEJJY9');
-    </script>
-
-    <title>Hack This Page?</title>
+  <title>Hack This Page?</title>
 </head>
 
 <body>
-    <!-- Credit -->
-    <h4 id="credits">Developed by <a target="_blank" href="https://virejdasani.github.io/virej/">@VirejDasani</a></h4>
-    <!-- Title -->
-    <h1 id="title">Hack This Page?</h1>
-    <!-- Hack Button -->
-    <button id="hackButton">HACK</button>
-    <!-- Tutorial -->
-    <p><a href="https://youtu.be/678LAl7E76U" target="_blank" id="tutorial">Tutorial</a></p>
-    <!-- Leave a reviewGoogle analytics -->
-    <p><a href="https://chrome.google.com/webstore/detail/hack-this-page/nbfegodimhenhkghjeppighcbpdinhdp/reviews"
-            target="_blank" id="tutorial">Leave a review</a></p>
+  <!-- Title -->
+  <h1 id="title">Hack This Page?</h1>
+  <!-- Hack Button -->
+  <button id="hackButton">HACK</button>
 
-    <script src="popup.js"></script>
+  <!-- Tutorial -->
+  <p><a href="https://youtu.be/678LAl7E76U" target="_blank" id="tutorial">Tutorial</a>
+
+    <!-- TODO: Add review link when extension goes live -->
+    <!-- | <a href="https://chrome.google.com/webstore/detail/hack-this-page/nbfegodimhenhkghjeppighcbpdinhdp/reviews"
+      target="_blank" id="tutorial">Leave a review</a> -->
+
+  </p>
+  <!-- Credit -->
+  <p id="credits">Developed by <a target="_blank" href="https://youtube.com/@Virej?sub_confirmation=1">@VirejDasani</a>
+  </p>
+
+
+  <script src="popup.js"></script>
 </body>
 
 </html>
