Hack This Page is back 🎉

--- a/popup.html
+++ b/popup.html
@@ -25,9 +25,8 @@
   <!-- Tutorial -->
   <p><a href="https://youtu.be/678LAl7E76U" target="_blank" id="tutorial">Tutorial</a>
 
-    <!-- TODO: Add review link when extension goes live -->
-    <!-- | <a href="https://chrome.google.com/webstore/detail/hack-this-page/nbfegodimhenhkghjeppighcbpdinhdp/reviews"
-      target="_blank" id="tutorial">Leave a review</a> -->
+    <a href="https://chromewebstore.google.com/detail/hack-this-page/nfnancecciahmmbdmjnlojmnmdlofkjc/reviews"
+      target="_blank" id="tutorial">Leave a review</a>
 
   </p>
   <!-- Credit -->
